# plgl

./: .gitignore  CMakeLists.txt  README.md  build.sh  compatibility.ods  compile  test.py
lib/: CMakeLists.txt  glad.c  glad.h  perlin.hpp  stb_image_write.cpp  stb_truetype.cpp  stb_vorbis.cpp  winx.c  winx.h
src/: buffer.hpp  color.cpp  color.hpp  context.hpp  disabled.hpp  event.hpp  external.cpp  external.hpp  globals.cpp  globals.hpp  internal.cpp  internal.hpp  main.cpp  math.cpp  math.hpp  quality.hpp  random.cpp  random.hpp  renderer.hpp  shader.hpp  texture.hpp  time.cpp  time.hpp  utf8.cpp  utf8.hpp  util.hpp  window.cpp  window.hpp
src/render/: arc.hpp  atlas.cpp  atlas.hpp  basic.cpp  basic.hpp  buffer.cpp  buffer.hpp  font.cpp  font.hpp  image.cpp  image.hpp  pipeline.cpp  pipeline.hpp  polygon.cpp  polygon.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/sound/: debug.cpp  debug.hpp  generator.cpp  generator.hpp  handles.cpp  handles.hpp  sound.cpp  sound.hpp  source.cpp  source.hpp  system.cpp  system.hpp
test/: CMakeLists.txt
test/atlas/: CMakeLists.txt  main.cpp
test/main/: CMakeLists.txt  main.cpp
test/simple/: CMakeLists.txt  main.cpp
